--- a/main.css
+++ b/main.css
@@ -17,7 +17,8 @@ body {
 }
 
 h1 {
-  font-size: 1.15em;}
+  font-size: 1.15em;
+}
 
  .hero-image {
   background: 
@@ -83,4 +84,13 @@ text-align: center;
   padding: 16px 32px;
 }
 
+hr {
+  border: 0;
+  height: 1px;
+  background-image: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(177, 177, 177, 0.961), rgba(255, 255, 255, 0));
+}
+
+.grid-section {
+  margin-top: 5rem;
+}
 
