--- a/main.css
+++ b/main.css
@@ -2,6 +2,9 @@ body {
   background-color: rgb(242, 242, 242);
 }
 
+.fa-sort-down{
+  color: #808080;
+}
 .image-border {
   /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
   box-shadow:0 4px 8px 0 rgba(146, 145, 145, 0.2), 0 6px 20px 0 rgba(105, 105, 105, 0.19);
