--- a/main.css
+++ b/main.css
@@ -64,37 +64,13 @@ h1 {
   padding: 2rem 0 0.8rem;
 }
 
-.box {
+.image-container {
   position: relative;
-  width: 50%;
-}
+  transition: 0.3s ease;
+} 
 
-.grid-image {
-opacity: 1;
-display: block;
-width: 100%;
-height: auto;
-transition: 1s ease;
-backface-visibility: hidden;
-}
-
-.middle {
-transition: 1s ease;
-opacity: 0;
-position: absolute;
-top: 50%;
-left: 50%;
-transform: translate(-50%, -50%);
--ms-transform: translate(-50%, -50%);
-text-align: center;
-}
-
-.box:hover .image {
-  opacity: 0.3;
-}
-
-.box:hover .middle {
-  opacity: 1;
+.image-container:hover {
+  opacity: 0.70;
 }
 
 hr {
