--- a/main.css
+++ b/main.css
@@ -1,3 +1,7 @@
+html.sr .load-hidden {
+  visibility: hidden;
+}
+
 body {
   background-color: rgb(242, 242, 242);
   font-family: 'Nunito', sans-serif;
